--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     <meta name="keywords" content="blank-space, eve online, eve, online" />
     <meta name="robots" content="index, follow" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/css/bootstrap.min.css" />
-    <!--  <link rel="stylesheet" href="css/bootstrap.min.css" /> -->
-    <link rel="stylesheet" href="css/font-awesome.min.css" />
+    <!-- <link rel="stylesheet" href="css/bootstrap.min.css" /> -->
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
+   <!-- <link rel="stylesheet" href="css/font-awesome.min.css" /> -->
     <link rel="stylesheet" href="css/isotope.css" />
     <link rel="stylesheet" href="css/epic.css" />
     <link href="js/owl-carousel/owl.carousel.css" rel="stylesheet">
