--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
    <!-- <link rel="stylesheet" href="css/font-awesome.min.css" /> -->
     <link rel="stylesheet" href="css/isotope.css" />
     <link rel="stylesheet" href="css/epic.css" />
-    <link href="js/owl-carousel/owl.carousel.css" rel="stylesheet">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/11.0.5/swiper-bundle.min.css" />
+    <!--<link href="js/owl-carousel/owl.carousel.css" rel="stylesheet">
     <link href="js/owl-carousel/owl.theme.css" rel="stylesheet">
-    <link href="js/owl-carousel/owl.transitions.css" rel="stylesheet">
+    <link href="js/owl-carousel/owl.transitions.css" rel="stylesheet"> -->
     <link href="css/YTPlayer.css" rel="stylesheet">
     <!--[if lt IE 9]>
         <script src="./js/html5shiv.js"></script>
@@ -195,6 +197,7 @@
     <script src="js/bootstrap.min.js"></script>
     <script src="js/styleswitch.js"></script>
     <script src="js/default.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/11.0.5/swiper-bundle.min.js"></script>
     <!-- END Scripts -->
 
 </body>
