--- a/index.html
+++ b/index.html
@@ -182,23 +182,23 @@
         </footer>
        
 
-<!-- BEGIN Scripts-->
-<script src="js/modernizr.custom.js"></script>  <!-- IE/legacy feature detection - dead -->
-<script src="js/jquery.js"></script>  <!-- keep for now, default.js may need it -->
-<script src="js/classie.js"></script>  <!-- dead, CSS class utility pre-vanilla JS -->
-<script src="js/pathLoader.js"></script>  <!-- drives the intro loader SVG animation -->
-<!-- <script src="js/owl-carousel/owl.carousel.min.js"></script> --> <!-- replaced by Swiper -->
-<!-- <script src="js/isotope.pkgd.min.js"></script> --> <!-- no filtering UI, dead -->
-<script src="js/jquery.inview.js"></script>  <!-- scroll detection, may be needed -->
-<script src="js/jquery.nav.js"></script>  <!-- smooth scroll nav, may be needed -->
-<!-- <script src="js/jquery.mb.YTPlayer.js"></script> --> <!-- no video embed, dead -->
-<!-- <script src="js/jquery.form.js"></script> --> <!-- no forms on page, dead -->
-<!-- <script src="js/jquery.validate.js"></script> --> <!-- no forms on page, dead -->
-<!-- <script src="js/bootstrap.min.js"></script> --> <!-- CRITICAL - Bootstrap 3 JS fighting Bootstrap 5 CSS -->
-<script src="js/styleswitch.js"></script>  <!-- unknown, keep for now -->
-<script src="js/default.js"></script>  <!-- core page behaviour, keep -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/11.0.5/swiper-bundle.min.js"></script>
-<!-- END Scripts -->
+    <!-- BEGIN Scripts-->
+    <script src="js/modernizr.custom.js"></script>
+    <script src="js/jquery.js"></script>
+    <script src="js/classie.js"></script>
+    <script src="js/pathLoader.js"></script>
+    <script src="js/owl-carousel/owl.carousel.min.js"></script>
+    <script src="js/isotope.pkgd.min.js"></script>
+    <script src="js/jquery.inview.js"></script>
+    <script src="js/jquery.nav.js"></script>
+    <script src="js/jquery.mb.YTPlayer.js"></script>
+    <script src="js/jquery.form.js"></script>
+    <script src="js/jquery.validate.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/styleswitch.js"></script>
+    <script src="js/default.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/11.0.5/swiper-bundle.min.js"></script>
+    <!-- END Scripts -->
 
 </body>
 </html>
