--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
     <script src="js/jquery.mb.YTPlayer.js"></script>
     <script src="js/jquery.form.js"></script>
     <script src="js/jquery.validate.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <!-- <script src="js/bootstrap.min.js"></script> -->
     <script src="js/styleswitch.js"></script>
     <script src="js/default.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/11.0.5/swiper-bundle.min.js"></script>
