reverting for now

--- a/index.html
+++ b/index.html
@@ -185,9 +185,10 @@
     <script src="js/jquery.nav.js"></script>
     <script src="js/jquery.mb.YTPlayer.js"></script>
     <script src="js/jquery.form.js"></script>
-    <script src="js/bootstrap.min.js"></script> 
+    <script src="js/jquery.validate.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/styleswitch.js"></script>
     <script src="js/default.js"></script>
     <!-- END Scripts -->
-
 </body>
 </html>
