--- a/index.html
+++ b/index.html
@@ -8,14 +8,18 @@
     <meta name="description" content="Blank-Space - Join Today!" />
     <meta name="keywords" content="blank-space, eve online, eve, online" />
     <meta name="robots" content="index, follow" />
-    <link rel="stylesheet" href="css/bootstrap.min.css" /> 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
+    <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <link rel="stylesheet" href="css/font-awesome.min.css" />
     <link rel="stylesheet" href="css/isotope.css" />
     <link rel="stylesheet" href="css/epic.css" />
     <link href="js/owl-carousel/owl.carousel.css" rel="stylesheet">
     <link href="js/owl-carousel/owl.theme.css" rel="stylesheet">
-    <link href="js/owl-carousel/owl.transitions.css" rel="stylesheet"> 
+    <link href="js/owl-carousel/owl.transitions.css" rel="stylesheet">
     <link href="css/YTPlayer.css" rel="stylesheet">
+    <!--[if lt IE 9]>
+        <script src="./js/html5shiv.js"></script>
+        <script src="./js/respond.js"></script>
+    <![endif]-->
 </head>
 <body>
     <div id="ip-container" class="ip-container">
@@ -190,5 +194,6 @@
     <script src="js/styleswitch.js"></script>
     <script src="js/default.js"></script>
     <!-- END Scripts -->
+
 </body>
 </html>
