--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <link href='https://fonts.googleapis.com/css?family=Lato:300,400,700%7CMerriweather:400,300%7CRaleway:800,600,500,400,300%7CLibre+Baskerville:400,400italic%7CMontserrat%7CRoboto:300%7COpen+Sans:300' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Merriweather:wght@300;400&family=Raleway:wght@300;400;500;600;800&family=Libre+Baskerville:ital,wght@0,400;1,400&family=Montserrat:wght@400;600&family=Roboto:wght@300&family=Open+Sans:wght@300&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <title>Blank-Space | EVE Online</title>
@@ -9,7 +9,7 @@
     <meta name="keywords" content="blank-space, eve online, eve, online" />
     <meta name="robots" content="index, follow" />
     <link rel="stylesheet" href="css/bootstrap.min.css" />
-    <link rel="stylesheet" href="css/font-awesome.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
     <link rel="stylesheet" href="css/isotope.css" />
     <link rel="stylesheet" href="css/epic.css" />
     <link href="js/owl-carousel/owl.carousel.css" rel="stylesheet">
