--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
         <section id="home-slider">
             <div class="overlay"></div>
             <div id="owl-main" class="owl-carousel">
-                <div class="item"><img src="images/slider/01.jpg" alt=""></div>
-                <div class="item"><img src="images/slider/02.jpg" alt=""></div>
-                <div class="item"><img src="images/slider/03.jpg" alt=""></div>
+                <div class="item"><img src="https://edge.socketkill.com/taylr/01.jpg" alt=""></div>
+                <div class="item"><img src="https://edge.socketkill.com/taylr/02.jpg" alt=""></div>
+                <div class="item"><img src="https://edge.socketkill.com/taylr/03.jpg" alt=""></div>
 
             </div>
             <div class="slide-content">
