--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
         <section id="home-slider">
             <div class="overlay"></div>
             <div id="owl-main" class="owl-carousel">
-                <div class="item"><img src="https://edge.socketkill.com/taylr/01.jpg" alt=""></div>
-                <div class="item"><img src="https://edge.socketkill.com/taylr/02.jpg" alt=""></div>
-                <div class="item"><img src="https://edge.socketkill.com/taylr/03.jpg" alt=""></div>
+                <div class="item"><img src="https://pub-813c37ac771c4db1820cabda374b9c14.r2.dev/taylr/01.jpg" alt=""></div>
+                <div class="item"><img src="https://pub-813c37ac771c4db1820cabda374b9c14.r2.dev/taylr/02.jpg" alt=""></div>
+                <div class="item"><img src="https://pub-813c37ac771c4db1820cabda374b9c14.r2.dev/taylr/03.jpg" alt=""></div>
 
             </div>
             <div class="slide-content">
