--- a/index.html
+++ b/index.html
@@ -121,12 +121,8 @@
         </div>
     </section>
 
-</div>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/11.0.5/swiper-bundle.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.bundle.min.js"></script>
-<script src="js/main.js"></script>
-</body>
+
 
 
 <footer id="footer" 
@@ -140,3 +136,12 @@
         <p class="footer-credit">Original design by <a href="https://kryptedgaming.com/">Krypted Gaming</a></p>
         <p class="footer-credit">Redeveloped by <a href="https://socketkill.com/">Dexomus Viliana</a></p>
 </footer>
+</div>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/11.0.5/swiper-bundle.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.bundle.min.js"></script>
+<script src="js/main.js"></script>
+
+
+</body>
+</html>
