--- a/index.html
+++ b/index.html
@@ -118,23 +118,22 @@
                     <p>We generate content and cooperate with partners to give our members the best internet spaceships experience.</p>
                 </div>
             </div>
-        </div>
+        
     </section>
 
 
 
 
 
-<footer id="footer" 
+<footer id="footer">
     <div class="container">
     <a href="#home-slider" class="scrollup">Back to top</a>
-    <div class="container">
         <h6 class="social-title2">Join our community</h6>
-        <h5 class="social-title">JOIN OUR INGAME CHANNEL <strong>"TAYLR Public"</strong>!</h4>
+        <h5 class="social-title">JOIN OUR INGAME CHANNEL <strong>"TAYLR Public"</strong>!</h5>
          <!-- <h5>Come chat with us in our <a href="#">Discord</a>!</h5> -->
-    </div>
         <p class="footer-credit">Original design by <a href="https://kryptedgaming.com/">Krypted Gaming</a></p>
         <p class="footer-credit">Redeveloped by <a href="https://socketkill.com/">Dexomus Viliana</a></p>
+    </div>
 </footer>
 </div>
 
