--- a/index.html
+++ b/index.html
@@ -5,13 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <title>Blank-Space | EVE Online</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <meta name="description" content="Blank-Space - Join Today!" />
-    <meta name="keywords" content="blank-space, eve online, eve, online" />
+    <meta name="keywords" content="blank-space, eve online, eve, online, pvp, mmorpg, taylor swift" />
     <meta name="robots" content="index, follow" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/11.0.5/swiper-bundle.min.css" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="icon" type="image/png" href="https://edge.socketkill.com/favicon.png">
+
+
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://taylr.space/">
+    <meta property="og:title" content="Blank-Space | EVE Online">
+    <meta property="og:description" content="More than just a corp. We bring together a diverse group of people united in their passion for internet spaceships, guitar playing blondes from Nashville, and shiny killmails.">
+    <meta property="og:image" content="https://socketkill.com/socket-preview-v1.png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:image:type" content="image/png">
 </head>
 <body>
 
@@ -20,7 +33,7 @@
     <!-- Loader -->
     <header class="ip-header" id="loader">
         <div class="ip-logo">
-            <img src="images/logointro01.png" alt="Blank-Space"/>
+            <img src="https://edge.socketkill.com/taylr/loading-page.png" alt="Blank-Space"/>
         </div>
         <div class="ip-loader">
             <svg class="ip-inner" width="60px" height="60px" viewBox="0 0 80 80">
@@ -120,11 +133,6 @@
             </div>
         
     </section>
-
-
-
-
-
 <footer id="footer">
     <div class="container">
     <a href="#home-slider" class="scrollup">Back to top</a>
@@ -136,11 +144,8 @@
     </div>
 </footer>
 </div>
-
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/11.0.5/swiper-bundle.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.bundle.min.js"></script>
-<script src="js/main.js"></script>
-
-
+<script src="main.js"></script>
 </body>
 </html>
