edge network loading

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/11.0.5/swiper-bundle.min.css" />
     <link rel="stylesheet" href="style.css" />
-    <link rel="icon" type="image/png" href="https://edge.socketkill.com/favicon.png">
+    <link rel="icon" type="image/png" href="https://edge.socketkill.com/taylr/favicon.png">
 
 
     <meta property="og:type" content="website">
@@ -47,8 +47,8 @@
     <nav class="navbar navbar-expand-lg fixed-top" id="header">
         <div class="container">
             <a class="navbar-brand" href="#home-slider">
-                <img src="images/logo.png" alt="Blank-Space" class="logo-normal"/>
-                <img src="images/epic_mini.png" alt="Blank-Space" class="logo-mini d-none"/>
+                <img src="https://edge.socketkill.com/taylr/logo.png" alt="Blank-Space" class="logo-normal"/>
+                <img src="https://edge.socketkill.com/taylr/epic_mini.png" alt="Blank-Space" class="logo-mini d-none"/>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <i class="fa fa-bars"></i>
@@ -68,14 +68,14 @@
         <div class="overlay"></div>
         <div class="swiper hero-swiper">
             <div class="swiper-wrapper">
-                <div class="swiper-slide"><img src="https://pub-813c37ac771c4db1820cabda374b9c14.r2.dev/taylr/01.jpg" alt=""/></div>
-                <div class="swiper-slide"><img src="https://pub-813c37ac771c4db1820cabda374b9c14.r2.dev/taylr/02.jpg" alt=""/></div>
-                <div class="swiper-slide"><img src="https://pub-813c37ac771c4db1820cabda374b9c14.r2.dev/taylr/03.jpg" alt=""/></div>
+                <div class="swiper-slide"><img src="https://edge.socketkill.com/taylr/01.jpg" alt=""/></div>
+                <div class="swiper-slide"><img src="https://edge.socketkill.com/taylr/02.jpg" alt=""/></div>
+                <div class="swiper-slide"><img src="https://edge.socketkill.com/taylr/03.jpg" alt=""/></div>
             </div>
             <div class="swiper-pagination"></div>
         </div>
         <div class="slide-content">
-            <span class="logointro"><img src="images/logointro01.png" alt="Blank-Space"/></span>
+            <span class="logointro"><img src="https://edge.socketkill.com/taylr/logointro01.png" alt="Blank-Space"/></span>
             <div class="swiper text-swiper">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide"><h2>Blank-Space</h2></div>
