--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
     <meta property="og:url" content="https://taylr.space/">
     <meta property="og:title" content="Blank-Space | EVE Online">
     <meta property="og:description" content="More than just a corp. We bring together a diverse group of people united in their passion for internet spaceships, guitar playing blondes from Nashville, and shiny killmails.">
-    <meta property="og:image" content="https://taylrdev.socketkill.com/taylor.jpg">
+    <meta property="og:image" content="https://edge.socketkill.com/taylr/logo.png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
-    <meta property="og:image:type" content="image/jpg">
+    <meta property="og:image:type" content="image/png">
 </head>
 <body>
 
