--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Merriweather:wght@300;400&family=Raleway:wght@300;400;500;600;800&family=Libre+Baskerville:ital,wght@0,400;1,400&family=Montserrat:wght@400;600&family=Roboto:wght@300&family=Open+Sans:wght@300&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <title>Blank-Space | EVE Online</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
     <meta name="description" content="Blank-Space - Join Today!" />
     <meta name="keywords" content="blank-space, eve online, eve, online, pvp, mmorpg, taylor swift" />
     <meta name="robots" content="index, follow" />
@@ -21,7 +22,7 @@
     <meta property="og:url" content="https://taylr.space/">
     <meta property="og:title" content="Blank-Space | EVE Online">
     <meta property="og:description" content="More than just a corp. We bring together a diverse group of people united in their passion for internet spaceships, guitar playing blondes from Nashville, and shiny killmails.">
-    <meta property="og:image" content="https://edge.socketkill.com/taylr/logo.png">
+    <meta property="og:image" content="https://taylrdev.socketkill.com/images/taylor.jpg">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta property="og:image:type" content="image/png">
