--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
                 <div class="swiper-slide"><img src="https://edge.socketkill.com/taylr/01.jpg" alt=""/></div>
                 <div class="swiper-slide"><img src="https://edge.socketkill.com/taylr/02.jpg" alt=""/></div>
                 <div class="swiper-slide"><img src="https://edge.socketkill.com/taylr/03.jpg" alt=""/></div>
+                <div class="swiper-slide"><img src="https://edge.socketkill.com/taylr/04.jpg" alt=""/></div>
             </div>
             <div class="swiper-pagination"></div>
         </div>
