reloaded official tag image

--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="icon" type="image/png" href="https://edge.socketkill.com/taylr/favicon.png">
 
-
 <!-- HTML Meta Tags -->
-
+<title>Blank-Space | EVE Online</title>
+<meta name="description" content="More than just a corp. We bring together a diverse group of people united in their passion for internet spaceships, guitar playing blondes from Nashville, and shiny killmails.">
 
 <!-- Facebook Meta Tags -->
 <meta property="og:url" content="https://taylrdev.socketkill.com/">
 <meta property="og:type" content="website">
 <meta property="og:title" content="Blank-Space | EVE Online">
 <meta property="og:description" content="More than just a corp. We bring together a diverse group of people united in their passion for internet spaceships, guitar playing blondes from Nashville, and shiny killmails.">
-<meta property="og:image" content="https://edge.socketkill.com/taylr/D1LwD6tUcAAlyMD.jpg">
+<meta property="og:image" content="https://edge.socketkill.com/taylr/TAYLR_banner_trial_3.png">
 
 <!-- Twitter Meta Tags -->
 <meta name="twitter:card" content="summary_large_image">
@@ -34,9 +34,8 @@
 <meta property="twitter:url" content="https://taylrdev.socketkill.com/">
 <meta name="twitter:title" content="Blank-Space | EVE Online">
 <meta name="twitter:description" content="More than just a corp. We bring together a diverse group of people united in their passion for internet spaceships, guitar playing blondes from Nashville, and shiny killmails.">
-<meta name="twitter:image" content="https://edge.socketkill.com/taylr/D1LwD6tUcAAlyMD.jpg">
+<meta name="twitter:image" content="https://edge.socketkill.com/taylr/TAYLR_banner_trial_3.png">
 
-<!-- Meta Tags Generated via https://www.opengraph.xyz -->
 
 </head>
 <body>
