--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Merriweather:wght@300;400&family=Raleway:wght@300;400;500;600;800&family=Libre+Baskerville:ital,wght@0,400;1,400&family=Montserrat:wght@400;600&family=Roboto:wght@300&family=Open+Sans:wght@300&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+	<meta name="referrer" content="no-referrer">
     <title>Blank-Space | EVE Online</title>
 
     <meta name="description" content="More than just a corp. We bring together a diverse group of people united in their passion for internet spaceships, guitar playing blondes from Nashville, and shiny killmails.">
@@ -84,6 +85,7 @@
                 <div class="swiper-slide"><img src="https://edge.socketkill.com/taylr/02.jpg" alt=""/></div>
                 <div class="swiper-slide"><img src="https://edge.socketkill.com/taylr/03.jpg" alt=""/></div>
                 <div class="swiper-slide"><img src="https://edge.socketkill.com/taylr/04.png" alt=""/></div>
+				<div class="swiper-slide"><img src="https://edge.socketkill.com/taylr/05.png" alt=""/></div>
             </div>
             <div class="swiper-pagination"></div>
         </div>
