--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <meta name="description" content="More than just a corp. We bring together a diverse group of people united in their passion for internet spaceships, guitar playing blondes from Nashville, and shiny killmails.">
 
 <!-- Facebook Meta Tags -->
-<meta property="og:url" content="https://taylrdev.socketkill.com/">
+<meta property="og:url" content="https://taylr.space/">
 <meta property="og:type" content="website">
 <meta property="og:title" content="Blank-Space | EVE Online">
 <meta property="og:description" content="More than just a corp. We bring together a diverse group of people united in their passion for internet spaceships, guitar playing blondes from Nashville, and shiny killmails.">
@@ -32,7 +32,7 @@
 <!-- Twitter Meta Tags -->
 <meta name="twitter:card" content="summary_large_image">
 <meta property="twitter:domain" content="taylrdev.socketkill.com">
-<meta property="twitter:url" content="https://taylrdev.socketkill.com/">
+<meta property="twitter:url" content="https://taylr.space/">
 <meta name="twitter:title" content="Blank-Space | EVE Online">
 <meta name="twitter:description" content="More than just a corp. We bring together a diverse group of people united in their passion for internet spaceships, guitar playing blondes from Nashville, and shiny killmails.">
 <meta name="twitter:image" content="https://edge.socketkill.com/taylr/TAYLR_banner_trial_3.png">
